--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 #Copy from https://docs.github.com/en/pages/quickstart
 theme: jekyll-theme-minimal
-title: brederbs CV
+title: Brede Rimer Bjerke's CV
 description: Bookmark this to keep an eye on my project updates!
